[package]
name = "rustelebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"]}
url = "2.2.2"
serde = { version = "*", features = ["derive"] }
futures = "0.3.19"
