[package]
name = "rustelebot"
version = "0.3.2"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "A telegram bot API which help you send message, or utilize telegram bot API integrateable with your application"
repository = "https://github.com/haxpor/rustelebot"
license = "MIT"
keywords = ["telegram", "bot", "api"]
categories = ["api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.6", features = ["json"]}
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
futures = "0.3.19"
serde_json = "1.0.79"
